crap code doesn't work take 2

--- a/exercise.html
+++ b/exercise.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+<script> src = "" </script>
+
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Hejhopp</title>
 </head>
 <body>
-$END$
+<button id="exercise1" type="button" style="height:50px;width:100px" onload="exercise1 = Exercise.constructor(this.id, 123, 0, 0, 0)" onclick="Exercise.toggleSize()">
+    Toggle <size></size>
+</button>
 </body>
 </html>
