--- a/exercise.html
+++ b/exercise.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<script> src = "" </script>
+<script src = "exercise.js" type = "text/javascript" > </script>
+<script>
+    function toggleSize(id) {
+        for (i = 0; i < 10; i++) {
+            var element = document.createElement("button")
+            var t = document.createTextNode(i)
+            element.innerHTML = '<img src="images/hej.jpg" width="10%" height = "10%"/>';
+            element.appendChild(t)
+            var elementAbove = document.getElementById(id)
+            elementAbove.parentElement.appendChild(element)
+        }
+    }
+</script>
 
 <head>
     <meta charset="UTF-8">
     <title>Hejhopp</title>
 </head>
 <body>
-<button id="exercise1" type="button" style="height:50px;width:100px" onload="exercise1 = Exercise.constructor(this.id, 123, 0, 0, 0)" onclick="Exercise.toggleSize()">
-    Toggle <size></size>
+<button id="exercise1" type="button" style="height:50px;width:100px" onclick="toggleSize(this.id)">
+    Toggle
 </button>
+
 </body>
 </html>
+
