--- a/main.html
+++ b/main.html
@@ -25,7 +25,9 @@
         <div class ="mdl-layout__header-row">
             <!--Create breadcrumbs to show current path-->
             <ul class="breadcrumb">
-                <li><a href="#"><i class="material-icons">home</i></a></li>
+                <li>
+                    <i class="material-icons md-house icon-align">home</i>
+                </li>
             </ul>
             <!-- Title -->
             <!-- Add spacer, to align navigation to the right -->
