Created an exercise layout and styling

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -42,7 +42,7 @@
     <main class ="mdl-layout__content">
         <div id = "mainDiv" class="page-content">
             <!-- Content goes here -->
-            <button onclick="goBack()" >Escape!</button>
+            <button class="mdl-button mdl-js-button mdl-js-ripple-effect" onclick="goBack()" >Escape!</button>
         </div>
     </main>
 </div>
