--- a/main.html
+++ b/main.html
@@ -4,6 +4,21 @@
 <link rel = "stylesheet" href="mdl/material.min.css">
 <script src = "mdl/material.min.js"></script>
 <link rel ="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<!--Place this in a file of it's own-->
+<style>
+    .exercise{
+        width : 250px; height: 200px;
+        margin: 20px;
+    }
+    .exercise-container{
+        margin:auto;
+        width: 90%;
+        color: whitesmoke;
+        /*Add a shadow to the card*/
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+        box-sizing: border-box;
+    }
+</style>
 
 
 <!-- Script elements -->
@@ -52,8 +67,11 @@
         </nav>
     </div>
     <main class ="mdl-layout__content">
-        <div id = "mainDiv" class="page-content">
+        <div class="page-content">
             <!-- Content goes here -->
+            <div id="exerciseContainer" class="exercise-container">
+                <!-- Add exercise cards using js here. -->
+            </div>
         </div>
     </main>
 </div>
