Created a first layout of exercises as well as some basic styling. Todo: Create an exercise page with input forms and create a more fancy exercies layout.

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -34,7 +34,9 @@
     <main class ="mdl-layout__content">
         <div id = "mainDiv" class="page-content">
             <!-- Content goes here -->
-            <button class="mdl-button mdl-js-button mdl-js-ripple-effect" onclick="goBack()" >Escape!</button>
+            <div class="exercise-container">
+                Här skall komma mera.
+            </div>
         </div>
     </main>
 </div>
