--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
         margin: 20px;
     }
     .exercise-container{
+        padding: 40px;
         margin:auto;
         width: 90%;
         color: whitesmoke;
