--- a/main.html
+++ b/main.html
@@ -9,12 +9,13 @@
     .exercise{
         width : 250px; height: 200px;
         margin: 20px;
+        /*Adding a grey border as standard - will turn green when exercise has been completed*/
+        /*border: 2px solid lightgrey;*/
     }
     .exercise-container{
         padding: 40px;
         margin:auto;
-        width: 90%;
-        color: whitesmoke;
+        width: 94%;
         /*Add a shadow to the card*/
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
         box-sizing: border-box;
