Moved exercise page styling to css file.

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -6,7 +6,7 @@
 <link rel ="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 <!--Our css-->
-<link rel = "stylesheet" href="breadcrumb.css">
+<link rel = "stylesheet" href="intelligentlearning.css">
 
 
 
@@ -37,8 +37,7 @@
         <div id = "mainDiv" class="page-content">
             <!-- Content goes here -->
             <div class="question-container">
-                <div class="title-container" id="questionTitle">
-                </div>
+                <div class="text-container" id="questionTitle"></div>
                 <div class="text-container">
                     Lorem Ipsum är en utfyllnadstext från tryck- och förlagsindustrin. Lorem ipsum har varit standard ända sedan 1500-talet, när en okänd boksättare tog att antal bokstäver och blandade dem för att göra ett provexemplar av en bok. Lorem ipsum har inte bara överlevt fem århundraden, utan även övergången till elektronisk typografi utan större förändringar. Det blev allmänt känt på 1960-talet i samband med lanseringen av Letraset-ark med avsnitt av Lorem Ipsum, och senare med mjukvaror som Aldus PageMaker.
                 </div>
@@ -62,65 +61,6 @@
 </div>
 </html>
 
-<style>
-
-    .question-container{
-        /*Increase the margin a bit to make it look more */
-        padding: 60px;
-        margin:auto;
-        width: 60%;
-        /*Add a shadow to the card*/
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-        box-sizing: border-box;
-    }
-    .text-container{
-        /*This container just contains the text to be displayed and applies the desired formating.*/
-        margin: auto; /* Center the text container */
-        width: 80%;
-        /*Set the text color to black*/
-        color: black;
-        font-size: 20px;
-        /*Center the text*/
-        text-align: left;
-        padding: 20px;
-    }
-    .title-container{
-        /*This container just contains the title text to be displayed and applies the desired formating.*/
-        margin: auto; /* Center the text container */
-        width: 80%;
-        /*Set the text color to black*/
-        color: black;
-        font-size: 35px;
-        /*Center the text*/
-        text-align: left;
-        padding: 20px;
-    }
-    .image-container{
-        display: block; /* Make the image into a block element */
-        margin-left: auto;
-        margin-right: auto;
-        width: auto;
-        padding: 20px;
-    }
-    .answer-container{
-
-        /* The container for the answer form card */
-        padding: 40px;
-        margin:auto;
-        width: 60%;
-        /*Add a shadow to the card*/
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-        box-sizing: border-box;
-    }
-    .answer-form-container{
-        /*The styling for the answer form */
-        margin: auto; /* Center the text container */
-        width: 80%;
-        padding: 20px;
-    }
-</style>
-<!--Remove this from here and put in a CSS file-->
-
 <script>
     function checkResult(){
         result = exerciseAnswer.ParseForm();
@@ -137,6 +77,7 @@
         element.innerText = "Exercise " + num;
 
         questionTitle = document.getElementById("questionTitle");
+        questionTitle.style.fontSize = "35px"; //Set the title font size
         questionTitle.innerText = "Exercise " + num;
     }
 </script>
