--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 </style>
 
 <!--Our css-->
-<link rel = "stylesheet" href="breadcrumb.css">
+<link rel = "stylesheet" href="intelligentlearning.css">
 
 <!-- Script elements -->
 <script src = "exercise.js" type = "text/javascript" > </script>
