Adds functions that loads exercise JSON.

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -105,6 +105,32 @@
         }
         return firstCharacter + inputString.slice(1);
     }
+
+    function fetchExerciseInformation() {
+        let path = "exercise_information.json";
+        let actualJSON = null;
+        loadJSON(function (response) {
+            actualJSON = JSON.parse(response);
+        }, path);
+        return actualJSON;
+    }
+
+    /**
+     * Loads JSON from path
+     * @param callback, function that parses JSON
+     * @param path, path to JSON
+     */
+    function loadJSON(callback, path) {
+        let xobj = new XMLHttpRequest();
+        xobj.overrideMimeType("application/json");
+        xobj.open("GET", path, true);
+        xobj.onreadystatechange = function () {
+            if (xobj.readyState === 4 && xobj.status === 200) {
+                callback(xobj.responseText);
+            }
+        };
+        xobj.send(null);
+    }
 </script>
 
 
