Added footer to pages.

--- a/exercise_page.html
+++ b/exercise_page.html
@@ -59,6 +59,15 @@
             </div>
         </div>
     </main>
+    <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+            <div class="mdl-logo">Intelligent Learning</div>
+            <u1 class="mdl-mini-footer__link-list">
+                <li><a href="main.html">Help</a></li>
+                <li><a href="main.html">Privacy & Terms</a></li>
+            </u1>
+        </div>
+    </footer>
 </div>
 </html>
 
