--- a/main.html
+++ b/main.html
@@ -54,12 +54,31 @@
     <main class ="mdl-layout__content">
         <div class="page-content">
             <!-- Content goes here -->
-            <div id="exerciseContainer" class="exercise-container">
-                <!-- Add exercise cards using js here. -->
+            <div id="weekly-exercises-container" class="exercises-weekly-container">
+                <div class="text-container exercises-weekly-text-container">
+                    Uppgifter vecka 1
+                </div>
+                <div id="exerciseContainer" class="exercise-container">
+                    <!-- Add exercise cards using js here. -->
+                </div>
+                <div class="text-container exercises-weekly-text-container">
+                    Uppgifter vecka 2
+                </div>
             </div>
         </div>
     </main>
+    <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+            <div class="mdl-logo">Intelligent Learning</div>
+            <u1 class="mdl-mini-footer__link-list">
+                <li><a href="main.html">Help</a></li>
+                <li><a href="main.html">Privacy & Terms</a></li>
+            </u1>
+        </div>
+    </footer>
 </div>
+
+
 
 </html>
 
